// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceDependenciesLegend Tests should render ServiceDependenciesLegend component with correct labels 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-primary1"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--padding-left-medium StyledProps--padding-right-medium"
      style="height: 30px;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black100"
      >
        cv.monitoredServices.monitoredServiceTabs.serviceHealth:
      </p>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.unhealthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.needsAttention
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.observe
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.healthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          na
        </p>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main serviceTypesContainer StyledProps--padding-left-medium StyledProps--padding-right-medium StyledProps--flex StyledProps--flex-justifyContent-flex-start"
      style="height: 30px;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-right-xsmall"
          data-icon="dependency-default-icon"
        >
          <svg
            height="10"
            viewBox="0 0 16 16"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.802.35h0a.49.49 0 01.042 0h6.133a.491.491 0 01.491.491v6.136a.49.49 0 01-.49.491h0H.84h0a.49.49 0 01-.347-.143M.802.35L.599 7.22l-.105.106s0 0 0 0M.802.35L.795.351h.007zM.494 7.325a.49.49 0 01-.144-.348m.144.348L.35 6.977m0 0h0V.842v0H.5L.35 6.976zM8.984.351h0l-.302.49h-.15v0s0 0 0 0v6.136a.491.491 0 00.49.491h6.137a.49.49 0 00.491-.49V.84v0a.49.49 0 00-.144-.347h0A.491.491 0 0015.16.35h0-6.133a.49.49 0 00-.042 0zM.802 8.532h0l-.302.49H.35V15.16h0a.491.491 0 00.49.491h6.137a.491.491 0 00.491-.49V9.022v0a.49.49 0 00-.49-.491h0H.843a.49.49 0 00-.042 0zm.53-7.2h5.154v5.155H1.332V1.332zm8.182 0h5.154v5.155H9.514V1.332zm2.577 7.195a3.569 3.569 0 00-3.56 3.564 3.564 3.564 0 003.56 3.559 3.564 3.564 0 003.559-3.559 3.569 3.569 0 00-3.56-3.564zm-10.76.987h5.155v5.154H1.332V9.514zm10.76 0a2.572 2.572 0 012.577 2.577 2.568 2.568 0 01-2.577 2.572 2.568 2.568 0 01-2.577-2.572 2.572 2.572 0 012.577-2.577z"
              fill="currentColor"
              stroke="currentColor"
              stroke-width="0.3"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.changeSource.HarnessCDCurrentGen.applicationId
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-right-xsmall"
          data-icon="infrastructure"
        >
          <svg
            fill="currentColor"
            height="14"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.15 10.822l2.091-3.623-2.091-3.624H6.966L4.874 7.2l2.092 3.623h4.184zm2.944-4.106l-.004-.007-2.092-3.623a.98.98 0 00-.848-.49H6.966a.98.98 0 00-.848.49L4.026 6.709a.98.98 0 000 .98l2.092 3.623.007.012-.007.013-2.092 3.623a.98.98 0 000 .98l2.092 3.623a.98.98 0 00.848.49h4.184a.98.98 0 00.848-.49l2.092-3.623.01-.018h4.194a.98.98 0 00.849-.49l2.091-3.623a.98.98 0 000-.98l-2.091-3.623a.98.98 0 00-.849-.49h-4.2zM11.15 19.073l2.091-3.623-2.091-3.623H6.966L4.874 15.45l2.092 3.623h4.184zm9.236-7.754l-2.092 3.623h-4.183l-2.092-3.623 2.092-3.623h4.183l2.092 3.623z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          infrastructureText
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceDependenciesLegend Tests should render ServiceDependenciesLegend without ServiceType legend 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-primary1"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--padding-left-medium StyledProps--padding-right-medium"
      style="height: 30px;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black100"
      >
        cv.monitoredServices.monitoredServiceTabs.serviceHealth:
      </p>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.unhealthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.needsAttention
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.observe
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.healthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState StyledProps--margin-right-xsmall"
          style="width: 8px; height: 8px;"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey700"
        >
          na
        </p>
      </div>
    </div>
  </div>
</div>
`;
